--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
 </head>
-<body>
+<body style="background-color: rgb(247, 171, 142);">
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna Recipe</a>
+    <ul>
+        <li>
+            <a href="./recipes/lasagna.html">Lasagna Recipe</a>
+        </li>
+        <img src="./images/Homemade-lasagna.png" alt="An image of the finished lasagna" width="250" height="250">
+        
+    </ul>
+    
 </body>
 </html>
