Changing CSS to styles.css file

--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body style="background-color: rgb(247, 171, 142);">
-    <h1>Odin Recipes</h1>
+<body>
+    <h1 style="">Odin Recipes</h1>
     <ul>
         <li>
-            <a href="./recipes/lasagna.html">Lasagna Recipe</a>
+            <img src="./images/Homemade-lasagna.png" alt="An image of the finished lasagna" width="250" height="250">
         </li>
-        <img src="./images/Homemade-lasagna.png" alt="An image of the finished lasagna" width="250" height="250">
+        <a href="./recipes/lasagna.html">Lasagna Recipe</a>
+        <li>
+            <img src="./images/Homemade-lasagna.png" alt="An image of the finished lasagna" width="250" height="250">
+        </li>
+        <a href="./recipes/lasagna.html">Lasagna Recipe</a>
         
     </ul>
     
