--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
-<body style="background-color: rgb(247, 171, 142);">
+<body>
     <h1>Lasagna</h1>
     <img src="../images/Homemade-lasagna.png" alt="An image of the finished lasagna"
     width="250" height="250">
